--- a/.github/workflows/CL.yml
+++ b/.github/workflows/CL.yml
@@ -1,4 +1,4 @@
-name: Python CI
+name: Python MMC
 
 on:
   push:
@@ -9,23 +9,28 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
+    - name: Checkout repo
       uses: actions/checkout@v3
 
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
-        python-version: '3.11'
+        python-version: "3.11"
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pandas matplotlib
+        pip install numpy matplotlib
 
-    - name: Run plotting script
+    - name: Run MMC script
       run: |
-        python src03/labfisica03/codigo_grafica03.py
+        python graficos.py
+
+    - name: Upload generated images
+      uses: actions/upload-artifact@v3
+      with:
+        name: graficos-mmc
+        path: grafico_mmc.png
