--- a/.github/workflows/CL.yml
+++ b/.github/workflows/CL.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run Python script
         run: |
           echo "Ejecutando main.py..."
-          python main.py
+          python srcmmc/main.py
 
       - name: Upload artifact (logs)
         uses: actions/upload-artifact@v4
