--- a/.github/workflows/CL.yml
+++ b/.github/workflows/CL.yml
@@ -24,9 +24,12 @@ jobs:
       - name: Ejecutar graficos.py
         run: python srcmmc/graficos.py
 
+      - name: Listar archivos en srcmmc
+        run: ls -l srcmmc
+
       - name: Subir imagen como artefacto
         uses: actions/upload-artifact@v4
         with:
           name: grafica-linearizacion
           path: srcmmc/linearizado_mmc.png
-      
+
