--- a/.github/workflows/CL.yml
+++ b/.github/workflows/CL.yml
@@ -24,12 +24,13 @@ jobs:
       - name: Ejecutar graficos.py
         run: python srcmmc/graficos.py
 
-      - name: Listar archivos en srcmmc
-        run: ls -l srcmmc
+      - name: Configurar git
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
 
-      - name: Subir imagen como artefacto
-        uses: actions/upload-artifact@v4
-        with:
-          name: grafica-linearizacion
-          path: srcmmc/linearizado_mmc.png
-
+      - name: Guardar imagen en repo
+        run: |
+          git add srcmmc/linearizado_mmc.png
+          git commit -m "Actualizar imagen generada automáticamente" || echo "No hay cambios para commitear"
+          git push
