--- a/.github/workflows/CL.yml
+++ b/.github/workflows/CL.yml
@@ -30,7 +30,12 @@ jobs:
           git config --global user.email "actions@github.com"
 
       - name: Guardar imagen en repo
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
           git add srcmmc/linearizado_mmc.png
           git commit -m "Actualizar imagen generada automáticamente" || echo "No hay cambios para commitear"
-          git push
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:main
+
