--- a/.github/workflows/CL.yml
+++ b/.github/workflows/CL.yml
@@ -11,28 +11,31 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+     - uses: actions/checkout@v4
+       with:
+         persist-credentials: true 
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
+     - name: Set up Python
+       uses: actions/setup-python@v4
+       with:
+         python-version: "3.10"
 
-      - name: Install dependencies
-        run: pip install numpy pandas matplotlib
+     - name: Install dependencies
+       run: pip install numpy pandas matplotlib
 
-      - name: Ejecutar graficos.py
-        run: python srcmmc/graficos.py
+     - name: Ejecutar graficos.py
+       run: python srcmmc/graficos.py
 
-      - name: Configurar git
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
+     - name: Configurar git
+       run: |
+         git config --global user.name "github-actions"
+         git config --global user.email "actions@github.com"
 
-      - name: Commit y push de la imagen
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git add srcmmc/linearizado_mmc.png
-          git commit -m "Actualizar imagen generada automáticamente" || echo "No hay cambios para commitear"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }} HEAD:main
+     - name: Commit y push de la imagen
+       run: |
+         git config --global user.name "github-actions"
+         git config --global user.email "actions@github.com"
+         git add srcmmc/linearizado_mmc.png
+         git commit -m "Actualizar imagen generada automáticamente" || echo "No hay cambios para commitear"
+         git push
+
