--- a/.github/workflows/CL.yml
+++ b/.github/workflows/CL.yml
@@ -32,13 +32,12 @@ jobs:
          git config --global user.email "actions@github.com"
 
      - name: Commit y push de la imagen
-       env:
-         PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
        run: |
          git config --global user.name "github-actions"
          git config --global user.email "actions@github.com"
          git add srcmmc/linearizado_mmc.png
          git commit -m "Actualizar imagen generada automáticamente" || echo "No hay cambios para commitear"
-         git push https://$PAT_TOKEN@github.com/${{ github.repository }} HEAD:main
+         git push origin HEAD:auto-img
+
 
 
