--- a/.github/workflows/CL.yml
+++ b/.github/workflows/CL.yml
@@ -10,8 +10,6 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        with:
-          persist-credentials: true
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -29,18 +27,19 @@ jobs:
           git config --global user.name "github-actions"
           git config --global user.email "actions@github.com"
 
-      - name: Commit y push a rama auto-img
+      - name: Commit y push de la imagen
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          git fetch origin auto-img || true
-          git checkout -B auto-img   # Crea o resetea auto-img
+          git checkout -B auto-img
           git add srcmmc/linearizado_mmc.png
-          git commit -m "Actualizar imagen generada automáticamente" || echo "No hay cambios para commitear"
-          git push --force origin auto-img
+          git commit -m "Actualizar imagen generada automáticamente" || echo "No hay cambios"
+          git push https://$PAT_TOKEN@github.com/${{ github.repository }} HEAD:auto-img --force
 
       - name: Crear Pull Request
         uses: peter-evans/create-pull-request@v5
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
           commit-message: "Actualizar imagen generada automáticamente"
           branch: auto-img
           base: main
