--- a/.github/workflows/CL.yml
+++ b/.github/workflows/CL.yml
@@ -1,4 +1,4 @@
-name: Generar y subir gráfica
+name: Generar y guardar gráfica
 
 on:
   push:
@@ -22,28 +22,8 @@ jobs:
       - name: Ejecutar graficos.py
         run: python srcmmc/graficos.py
 
-      - name: Configurar git
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-
-      - name: Commit y push de la imagen
-        env:
-          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
-        run: |
-          git checkout -B auto-img
-          git add srcmmc/linearizado_mmc.png
-          git commit -m "Actualizar imagen generada automáticamente" || echo "No hay cambios"
-          git push https://$PAT_TOKEN@github.com/${{ github.repository }} HEAD:auto-img --force
-
-      - name: Crear Pull Request
-        uses: peter-evans/create-pull-request@v5
+      - name: Subir imagen como artifact
+        uses: actions/upload-artifact@v4
         with:
-          token: ${{ secrets.PAT_TOKEN }}
-          commit-message: "Actualizar imagen generada automáticamente"
-          branch: auto-img
-          base: main
-          title: "Actualizar imagen"
-          body: "Actualización automática de la gráfica generada por workflow."
-          labels: "auto-update"
-          draft: false
+          name: linearizado_mmc
+          path: srcmmc/linearizado_mmc.png
