--- a/mmc/.github/workflows/CI.yml
+++ b/mmc/.github/workflows/CI.yml
@@ -13,9 +13,9 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v3
       with:
-        token: ${{ secrets.GH_TOKEN }}
+        token: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Install Python
+    - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
@@ -23,22 +23,16 @@ jobs:
     - name: Install Poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
-        export PATH="$HOME/.local/bin:$PATH"
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
 
     - name: Install dependencies
-      run: |
-        export PATH="$HOME/.local/bin:$PATH"
-        poetry install
+      run: poetry install
 
     - name: Run tests
-      run: |
-        export PATH="$HOME/.local/bin:$PATH"
-        poetry run pytest -v
+      run: poetry run pytest -v
 
     - name: Run grafico.py
-      run: |
-        export PATH="$HOME/.local/bin:$PATH"
-        poetry run python grafico.py
+      run: poetry run python grafico.py
 
     - name: Commit & push generated image
       run: |
@@ -47,5 +41,4 @@ jobs:
 
         git add mmc/image/linearizado_mmc.png || true
         git commit -m "Actualizar gráfico generado automáticamente" || echo "No hay cambios"
-
         git push
