--- a/.github/workflows/Cl.yml
+++ b/.github/workflows/Cl.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10"
+        python-version: "3.12"
 
     - name: Install Poetry
       run: |
@@ -26,19 +26,23 @@ jobs:
         echo "$HOME/.local/bin" >> $GITHUB_PATH
 
     - name: Install dependencies
-      run: poetry install
+      run: |
+        poetry install -C mmc
 
     - name: Run tests
-      run: poetry run pytest -v
+      run: |
+        poetry run -C mmc pytest -v
 
     - name: Run grafico.py
-      run: poetry run python grafico.py
+      run: |
+        poetry run -C mmc python grafico.py
 
     - name: Commit & push generated image
       run: |
+        cd mmc
         git config --global user.name "github-actions"
         git config --global user.email "github-actions@github.com"
 
-        git add mmc/image/linearizado_mmc.png || true
+        git add image/linearizado_mmc.png || true
         git commit -m "Actualizar gráfico generado automáticamente" || echo "No hay cambios"
         git push
