--- a/mmc/pyproject.toml
+++ b/mmc/pyproject.toml
@@ -14,6 +14,9 @@ numpy = "^1.26.0"
 [tool.poetry.dev-dependencies]
 pytest = "^8.4.0"
 
+[tool.poetry.packages]
+include = "MMC.py"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
