--- a/.github/workflows/Cl.yml
+++ b/.github/workflows/Cl.yml
@@ -27,12 +27,10 @@ jobs:
 
     # 4. Instalar dependencias
     - name: Install dependencies
-      run: |
-        poetry install -C mmc --no-root
+      run: poetry install -C mmc --no-root
 
     - name: Generate plot
-      run: |
-        poetry run -C mmc python grafico.py
+      run: poetry run -C mmc python grafico.py
 
     # 6. Commit & push del gráfico generado
     - name: Commit & Push plot
