--- a/mmc/pyproject.toml
+++ b/mmc/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 pandas = "^2.2.0"
 matplotlib = "^3.8.0"
 numpy = "^1.26.0"
+pydantic = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.4.0"
