--- a/mmc/pyproject.toml
+++ b/mmc/pyproject.toml
@@ -12,7 +12,7 @@ matplotlib = "^3.8.0"
 numpy = "^1.26.0"
 pydantic = "^2.0.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^8.4.0"
 
 [build-system]
