--- a/.github/workflows/Cl.yml
+++ b/.github/workflows/Cl.yml
@@ -13,35 +13,30 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # 1. Checkout del repositorio
     - name: Checkout repository
       uses: actions/checkout@v3
 
-    # 2. Configurar Python 3.12
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: "3.12"
 
-    # 3. Instalar Poetry
     - name: Install Poetry
       run: |
         curl -sSL https://install.python-poetry.org | python3 -
         echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-    # 4. Instalar dependencias sin instalar el proyecto
     - name: Install dependencies
       run: |
         poetry install -C mmc --no-root
 
-    # 5. Ejecutar linearizacion.py o grafico.py para generar la imagen
     - name: Run linearizacion.py
       run: |
         cd mmc
         poetry run python linearizacion.py
 
-    # 6. Commit & push de la imagen generada
     - name: Commit & Push generated image
+      if: github.event_name != 'pull_request'
       run: |
         cd mmc
         git config --global user.name "github-actions"
@@ -49,4 +44,3 @@ jobs:
         git add image/linearizado_mmc.png || true
         git commit -m "Actualizar gráfico automáticamente" || echo "No hay cambios"
         git push
-
