Actualizar Cl.yml

--- a/.github/workflows/Cl.yml
+++ b/.github/workflows/Cl.yml
@@ -30,6 +30,11 @@ jobs:
       run: |
         poetry install -C mmc --no-root
 
+    - name: Run tests (pytest)
+      run: |
+        cd mmc
+        poetry run pytest -q
+
     - name: Run linearizacion.py
       run: |
         cd mmc
