--- a/.github/workflows/Cl.yml
+++ b/.github/workflows/Cl.yml
@@ -30,6 +30,10 @@ jobs:
       run: |
         poetry install -C mmc --no-root
 
+    - name: Ensure mmc is a package
+      run: |
+        touch mmc/__init__.py
+
     - name: Add mmc to PYTHONPATH
       run: |
         echo "PYTHONPATH=$PYTHONPATH:$(pwd)/mmc" >> $GITHUB_ENV
