--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,13 +22,17 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Install dependencies with Poetry
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest pydantic
+          if [ -f "mmc/pyproject.toml" ]; then
+            curl -sSL https://install.python-poetry.org | python3 -
+            echo "$HOME/.local/bin" >> $GITHUB_PATH
+            poetry install -C mmc --no-root
+          else
+            echo "No se encontró mmc/pyproject.toml — se salta instalación"
+          fi
 
       - name: Run tests
         run: |
-          pytest --maxfail=1 --disable-warnings -v
+          poetry run pytest --maxfail=1 --disable-warnings -v
 
