--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,9 +11,10 @@ python = "^3.12"
 pydantic = "^2.1"
 matplotlib = "^3.8"   
 numpy = "^1.26"       
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^7.4"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
