--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install Poetry
+        run: |
+          curl -sSL https://install.python-poetry.org | python3 -
+          echo "$HOME/.local/bin" >> $GITHUB_PATH
+
       - name: Install dependencies with Poetry
         run: |
           if [ -f "mmc/pyproject.toml" ]; then
-            curl -sSL https://install.python-poetry.org | python3 -
-            echo "$HOME/.local/bin" >> $GITHUB_PATH
-            poetry install -C mmc --no-root
+            poetry install -C mmc --with dev
           else
             echo "No se encontró mmc/pyproject.toml — se salta instalación"
           fi
