--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install dependencies
+        run: pip install pytest
+
       - name: Install Poetry
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
