--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,20 @@
 [tool.poetry]
-name = "proyecto-fisica"
 version = "0.1.0"
-description = "Proyecto de laboratorio de física con MMC"
-authors = ["Tu Nombre <tu@email.com>"]
 readme = "README.md"
-license = "MIT"
+packages = [
+     { include = "labfisica01" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.12"
-pydantic = "^2.1"
-matplotlib = "^3.8"   
-numpy = "^1.26"       
+pandas = "^2.2.0"
+matplotlib = "^3.8.0"
+numpy = "^1.26.0"
+pydantic = "^2.0.0"
+
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.4"
+pytest = "^8.4.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
