--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,26 +24,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: pip install pytest
-
       - name: Install Poetry
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
-    
-      - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+        run: |
+          poetry install -C mmc --no-root --with dev
 
       - name: Run a simple command
         run: |
           echo "Dependencies installed. Workflow is running fine."
-
-
-      - name: Run Tests
-        run: |
-          cd mmc
-          pytest tests/
