--- a/mmc/pyproject.toml
+++ b/mmc/pyproject.toml
@@ -5,7 +5,7 @@ description = "Ajuste por Mínimos Cuadrados (MMC)."
 authors = ["Rodrigo Ramos-V"]
 readme = "README.md"
 packages = [
-     { include = "labfisica01" }
+     { include = "src01/labfisica01" }
 ]
 
 [tool.poetry.dependencies]
